LinKreta_POC_Repository/force-app/main/default/objects/Other_Enquiry_Areas__c/Other_Enquiry_Areas__c.object-meta.xml
<CustomObject>
    <label>Other Enquiry</label>
    <nameField>
        <label>Other Enquiry</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Other Enquiries</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>