LinKreta_POC_Repository/force-app/main/default/objects/Other_Enquiry_Areas__c/fields/Account_Plan__c.field-meta.xml
<CustomField>
    <fullName>Account_Plan__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account Plan</label>
    <referenceTo>Account_Plan__c</referenceTo>
    <relationshipLabel>Additional Opportunities (Not on LinKreta)</relationshipLabel>
    <relationshipName>Other_Enquiry_Areas</relationshipName>
    <type>Lookup</type>
</CustomField>