LinKreta_POC_Repository/force-app/main/default/objects/Other_Enquiry_Areas__c/fields/AccountId__c.field-meta.xml
<CustomField>
    <fullName>AccountId__c</fullName>
    <formula>CASESAFEID(Entity_Name__r.Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account ID</label>
    <type>Text</type>
</CustomField>