LinKreta_POC_Repository/force-app/main/default/objects/Other_Enquiry_Areas__c/fields/Entity_Name__c.field-meta.xml
<CustomField>
    <fullName>Entity_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Entity Name</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>Other_Enquiry_Areas</relationshipName>
    <type>Lookup</type>
</CustomField>