LinKreta_POC_Repository/force-app/main/default/objects/Other_Enquiry_Areas__c/fields/Expected_Fee_INR_lakhs__c.field-meta.xml
<CustomField>
    <fullName>Expected_Fee_INR_lakhs__c</fullName>
    <label>Expected Fee  (INR lakhs)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>