LinKreta_POC_Repository/force-app/main/default/objects/Other_Enquiry_Areas__c/fields/Key_Account_ID__c.field-meta.xml
<CustomField>
    <fullName>Key_Account_ID__c</fullName>
    <formula>CASESAFEID(Account_Plan__r.Client__r.Id )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Key Account ID</label>
    <type>Text</type>
</CustomField>