LinKreta_POC_Repository/force-app/main/default/objects/Other_Enquiry_Areas__c/fields/Key_Account_ID_Text__c.field-meta.xml
<CustomField>
    <fullName>Key_Account_ID_Text__c</fullName>
    <label>Key Account ID Text</label>
    <length>18</length>
    <type>Text</type>
</CustomField>