LinKreta_POC_Repository/force-app/main/default/objects/Other_Enquiry_Areas__c/fields/Primary_Client_contact__c.field-meta.xml
<CustomField>
    <fullName>Primary_Client_contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Primary Client contact</label>
    <lookupFilter>
        <active>false</active>
        <filterItems>
            <field>Contact.AccountId</field>
            <operation>equals</operation>
            <valueField>$Source.Entity_Name__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipName>Other_Enquiry_Areas</relationshipName>
    <type>Lookup</type>
</CustomField>