LinKreta_POC_Repository/force-app/main/default/objects/Other_Enquiry_Areas__c/fields/SME__c.field-meta.xml
<CustomField>
    <fullName>SME__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>SME</label>
    <referenceTo>SME_PL__c</referenceTo>
    <relationshipName>Other_Enquiry_Areas</relationshipName>
    <type>Lookup</type>
</CustomField>