LinKreta_POC_Repository/force-app/main/default/objects/Other_Enquiry_Areas__c/fields/SME_Text__c.field-meta.xml
<CustomField>
    <fullName>SME_Text__c</fullName>
    <label>SME</label>
    <length>255</length>
    <type>Text</type>
</CustomField>