LinKreta_POC_Repository/force-app/main/default/objects/Other_Enquiry_Areas__c/fields/SMEG__c.field-meta.xml
<CustomField>
    <fullName>SMEG__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>SMEG</label>
    <referenceTo>SMEG_Master__c</referenceTo>
    <relationshipName>Other_Enquiry_Areas</relationshipName>
    <type>Lookup</type>
</CustomField>