LinKreta_POC_Repository/force-app/main/default/objects/Other_Enquiry_Areas__c/fields/SMEG_Text__c.field-meta.xml
<CustomField>
    <fullName>SMEG_Text__c</fullName>
    <label>SMEG</label>
    <length>255</length>
    <type>Text</type>
</CustomField>